[package]
name = "spatial"
version = "0.1.0"
authors = ["Matt Jarvis <mattj23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "my_benchmark"
harness = false